--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <div class="NewAr">
     <h2>New Arrivals</h2>
 </div>
-< class="small-container">
+<div class="small-container">
     
     <div class="row">
       <div class="col-4">
